plugins {
    id 'java'
    id 'eclipse'

    // coverage tools
    id 'net.saliman.cobertura' version '2.3.1'
    id 'com.github.kt3k.coveralls' version '2.6.3'
}

sourceCompatibility = 1.7
targetCompatibility = 1.7
archivesBaseName = 'clust4j'
version = '1.1.0-SNAPSHOT'
cobertura.coverageFormats = ['html', 'xml'] // coveralls plugin depends on xml format report


compileJava {
    options.debug = true
}

repositories {
    mavenCentral()
    jcenter()
}

jar {
    baseName = 'clust4j'
    version = version

    // Load all of the dependencies into the jar
    from {
        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

test {
    // Only include the TestSuite class
    include 'com/clust4j/TestSuite*'
    // Exclude all in load package
    exclude 'com/clust4j/load/**'

    maxHeapSize = "512m"
    jvmArgs '-XX:MaxPermSize=256m'

    beforeTest { descriptor ->
      logger.lifecycle("Running test: " + descriptor)
   }
}

dependencies {
    compile 'log4j:log4j:1.2.17'
    compile 'org.apache.commons:commons-math3:3.2'
    compile 'org.apache.commons:commons-lang3:3.4'
    testCompile 'junit:junit:4.+'
}

task wrapper(type: Wrapper) {
    gradleVersion = '2.2'
}
